Issue #19420: Fix reference leak in module initalization code of _hashopenssl.c